chromeos: Export display power D-Bus methods for mus.

chrome_browser_main_chromeos.cc was only initializing the
DisplayPowerServiceProvider class, which exports the
SetPower method for the org.chromium.DisplayService D-Bus
service, for ash::Config::CLASSIC. We appear to be using
ash::Config::MUS now. Initialize the provider for everything
besides ash::Config::MASH instead.

Bug: 827026
Change-Id: Ic444682d63ff40a762f80b859d1a4795149e4d60
Reviewed-on: https://chromium-review.googlesource.com/987106
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Dan Erat <derat@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547047}
Former-commit-id: 27176aa4e56676b11df15ffb12611e32c2d2be03